on mobile removed fixed nav

--- a/skin/frontend/default/theexchange/css/0-767.css
+++ b/skin/frontend/default/theexchange/css/0-767.css
@@ -1,9 +1,9 @@
 @media (min-width: 0px) and (max-width: 767px) { .qty-wrapper { background: url("../images/btn-sprite.png") no-repeat -11px -309px; width: 132px; height: 51px; float: left; }
   .qty-wrapper .qty { float: left; margin-right: 5px; border: none; max-width: 100px; margin-left: 6px; text-align: center; line-height: 30px; margin-top: 10px; font-family: 'houschka_alt_probold'; font-weight: normal; font-size: 18px; color: #000; }
-  .wrapper .header-container .header { height: 113px; border-bottom: none; position: fixed; top: 3px; z-index: 9999; border-top: 2px Solid #000; }
+  .wrapper .header-container .header { height: 113px; border-bottom: none; position: static !important; top: auto !important; z-index: 9999; border-top: 2px Solid #000; }
   .wrapper .header-container .header .top-quick-links, .wrapper .header-container .header .call-us, .wrapper .header-container .header .quick-access { display: none; }
   .wrapper .header-container .header .logo-div { margin-top: 18px; }
-  .wrapper .header-container .fixed-container { display: block !important; top: 112px; z-index: 9999; }
+  .wrapper .header-container .fixed-container { position: relative !important; display: block !important; top: auto !important; z-index: 9999; }
   .wrapper .header-container .fixed-container .quick-access { width: 116px; }
   .wrapper .header-container .fixed-container .quick-access .links li:first-child { display: none; }
   .wrapper .header-container .fixed-container .cms-menu { padding: 1px 5px; }
@@ -54,7 +54,7 @@
   .page .product-view .mobile-title { display: block; }
   .page .product-view .mobile-title h2 { padding-left: 15px; }
   .page .product-view .product-img-box { float: left; width: 100%; }
-  .wrapper .menu-search-wrapper, .cms-index-index .wrapper .menu-search-wrapper { margin-top: 157px; box-sizing: border-box; -webkit-box-sizing: border-box; }
+  .wrapper .menu-search-wrapper, .cms-index-index .wrapper .menu-search-wrapper { margin-top: -12px; box-sizing: border-box; -webkit-box-sizing: border-box; }
   .wrapper .menu-search-wrapper .cms-menu, .cms-index-index .wrapper .menu-search-wrapper .cms-menu { display: none; }
   .wrapper .menu-search-wrapper .search-box, .cms-index-index .wrapper .menu-search-wrapper .search-box { background-size: auto; padding-top: 30px; height: 100px; }
   .wrapper .menu-search-wrapper .search-box .form-search, .cms-index-index .wrapper .menu-search-wrapper .search-box .form-search { padding-top: 0px; }
