--- a/skin/frontend/default/theexchange/sass/mobile/_search_box.scss
+++ b/skin/frontend/default/theexchange/sass/mobile/_search_box.scss
@@ -1,6 +1,6 @@
 .wrapper,.cms-index-index .wrapper{
   .menu-search-wrapper{
-    margin-top: 157px;
+    margin-top: -12px;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     .cms-menu{
